--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="color-scheme" content="dark">
     <meta property="og:title" content="Undangan Pernikahan Aldin & Nana">
     <meta property="og:description" content="Website Undangan Pernikahan Aldin & Nana Secara Online">
-    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.jpeg">
+    <meta property="og:image" content="https://i.ibb.co/DkFvK5k/Whats-App-Image-2023-09-25-at-21-35-47.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:alt" content="https://ulems.my.id/">
     <meta property="og:type" content="website">
@@ -219,7 +219,7 @@
                                 <img src="https://i.ibb.co/mbLSBJr/Whats-App-Image-2023-09-25-at-21-22-27.jpg" class="d-block w-100" onclick="modalFoto(this)">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://i.ibb.co/mbLSBJr/Whats-App-Image-2023-09-25-at-21-22-27.jpg" class="d-block w-100" onclick="modalFoto(this)">
+                                <img src="https://i.ibb.co/y5BgVw1/DSCF3903.jpg" class="d-block w-100" onclick="modalFoto(this)">
                             </div>
                             
                         </div>
