--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:description" content="Website Undangan Pernikahan Aldin & Nana Secara Online">
     <meta property="og:image" content="https://i.ibb.co/DkFvK5k/Whats-App-Image-2023-09-25-at-21-35-47.jpg">
     <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:alt" content="https://ulems.my.id/">
+    <meta property="og:image:alt" content="https://aldien15.github.io/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:site_name" content="Undangan">
-    <meta property="og:url" content="https://ulems.my.id/">
+    <meta property="og:url" content="https://aldien15.github.io/">
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin="anonymous">
     <link rel="preconnect" href="https://api.ulems.my.id" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
