--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                         </div>
                         <div class="col-auto">
                             <small>
-                                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://www.instagram.com/aldien15/">Aldien15</a>
+                                <i class="fa-brands fa-instagram"></i><a target="_blank" href="https://www.instagram.com/aldien15/">Aldien15</a>
                             </small>
                         </div>
                     </div>
